--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
     "name": "kivkovic/php-json",
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
-        "psr-0" : {
-            "Kreso\\" : "src/"
+        "psr-0": {
+            "Kreso": "src/"
         }
     }
 }
